--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://greatstack:greatstack@cluster0.37rba.mongodb.net"
+MONGODB_URI="mongodb+srv://myAtlasDBUser:admin@cluster0.xmyq8.mongodb.net"
 CLOUDINARY_NAME = 'dzk3hte2r'
 CLOUDINARY_API_KEY = '882544191791138'
 CLOUDINARY_SECRET_KEY = '35RAtxRlhuVFtIlXZ7iWdzk0AkU'
